--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/new.html.twig
@@ -13,12 +13,12 @@
 {% block body -%}
     {{ parent() }}
     
-    {% if form_errors(form.anio) or form_errors(form.mes) or form_errors(form.corresponsalia) or form_errors(form.tipogasto) or error %}
+    {% if form_errors(form.anio) or form_errors(form.mes) or form_errors(form.corresponsalia) or form_errors(form.tipogasto) or form_errors(form.descripcionperiodo) or error %}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
         <div>{{ form_errors(form.corresponsalia) }}</div>
         <div>{{ form_errors(form.tipogasto) }}</div>
-        <div>{{ form_errors(form.cobertura) }}</div>
+        <div>{{ form_errors(form.descripcionperiodo) }}</div>
         <div>{{ form_errors(form.anio) }}</div>
         <div>{{ form_errors(form.mes) }}</div>
         {% for e in error %}<div><ul><li>{{ e }}</li></ul></div>{% endfor %}
@@ -36,9 +36,9 @@
                 <div class="labelform">Tipo gasto:</div>
                 <div class="widgetform">{{ form_widget(form.tipogasto) }}</div>
             </div>
-            <div class="contenedorform" style="display: none;" id="cobertura">
-                <div class="labelform">Cobertura:</div>
-                <div class="widgetform">{{ form_widget(form.cobertura) }}</div>
+            <div class="contenedorform">
+                <div class="labelform">Descripción periodo:</div>
+                <div class="widgetform">{{ form_widget(form.descripcionperiodo) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">Anio:</div>
@@ -57,18 +57,5 @@
         <input type="submit" value="CREAR" class="btn btn-primary"> | 
         <a class="btn btn-default" href="{{ path('periodorendicion') }}">IR AL LISTADO</a>
     </form>
-    
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#frontend_corresponsaliabundle_periodorendicion_tipogasto').change(function(){
-                if($("#frontend_corresponsaliabundle_periodorendicion_tipogasto").val()==2)
-                    $("#cobertura").show()
-                else
-                    $("#cobertura").hide()
-            });
-            
-            if($("#frontend_corresponsaliabundle_periodorendicion_tipogasto").val()==2)
-                    $("#cobertura").show()
-        });
-     </script>
+
 {% endblock %}
