--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/index.html.twig
@@ -26,7 +26,7 @@
                 <th style="width: 5%">Mes</th>
                 <th style="width: 24%">Corresponsalía</th>
                 <th style="width: 18%">Tipo gasto</th>
-                <th style="width: 28%">Cobertura</th>
+                <th style="width: 28%">Descripción P.</th>
                 <th style="width: 5%">Estatus</th>
                 <th style="width: 15%">Actions</th>
             </tr>
@@ -39,7 +39,7 @@
                 <td>{{ entity.mes }}</td>
                 <td>{{ entity.corresponsalia.nombre }}</td>
                 <td>{{ entity.tipogasto.descripcion }}</td>
-                <td>{% if entity.tipogasto.id==2 %}{{ entity.cobertura|capitalize }}{% else %}N/A{% endif %}</td>
+                <td>{% if entity.descripcionperiodo!='' %}{{ entity.descripcionperiodo|capitalize }}{% else %}N/A{% endif %}</td>
                 <td>
                     {% if entity.estatus==1 %}
                         <span class="label label-info">Abierto</span>
@@ -96,7 +96,7 @@
     $(document).ready(function(){
        $('#tablalista').dataTable( { //CONVERTIMOS NUESTRO LISTADO DE LA FORMA DEL JQUERY.DATATABLES- PASAMOS EL ID DE LA TABLA
             "sPaginationType": "full_numbers", //DAMOS FORMATO A LA PAGINACION(NUMEROS)
-            "aaSorting": [[6,'asc'],[2,'asc'],[3,'asc']],
+            "aaSorting": [[1,'asc'],[2,'asc'],[4,'asc'],[7,'desc']],
         } );
     })
     </script>
