modificacion de periodos

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/new.html.twig
@@ -37,7 +37,7 @@
                 <div class="widgetform">{{ form_widget(form.tipogasto) }}</div>
             </div>
             <div class="contenedorform">
-                <div class="labelform">Descripción periodo:</div>
+                <div class="labelform">Descripción período:</div>
                 <div class="widgetform">{{ form_widget(form.descripcionperiodo) }}</div>
             </div>
             <div class="contenedorform">
