--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/index.html.twig
@@ -12,53 +12,83 @@
     <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/Jdatepicker.js') }}"></script>
 {% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <style type="text/css">
+        .table-bordered > thead > tr > th, 
+        .table-bordered > tbody > tr > th, 
+        .table-bordered > tfoot > tr > th, 
+        .table-bordered > thead > tr > td, 
+        .table-bordered > tbody > tr > td, 
+        .table-bordered > tfoot > tr > td {
+            border-color: #A5D9FF;
+        }
+        
+        .sorting_asc, 
+        .sorting_desc, 
+        .sorting, 
+        .sorting_asc_disabled,
+        .sorting_desc_disabled {
+            background-image: none;
+        }
+        
+        .table > thead >tr >th {
+            text-align: center;
+        }
+        .ajustar_label {
+            line-height: 20px;
+        }
+    </style>
+{% endblock %}
+
+
 {% block body -%}
     {{ parent() }}
-    <table id="tablalista" style="width: 97%;">
+    <table id="tablalista" class="table table-bordered table-condensed" style="width: 97%;">
         <thead>
             <tr>
-                <th>Categoria</th>
-                <th>Serialequipo</th>
-                <th>Descripcion</th>
+                <th style="width: 11%;">Categoria</th>
+                <th>Marca</th>
                 <th>Modelo</th>
+                <th style="width: 17%;">Descripción</th>
                 <th>Status</th>
                 <th>Asignacion</th>
                 <th>Corresponsalia</th>
-                <th>Acciones</th>
+                <th style="width: 12%;">Acciones</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in listEquipo %}
             <tr>
-                <td>{{ entity.categoria }}</td>
-                <td>{{ entity.serialEquipo }}</td>
-                <td>{{ entity.descripcion }}</td>
-                <td>{{ entity.modelo }}</td>
+                <td><small>{{ entity.categoria }}</small></td>
+                <td><small>{{ entity.modelo.marca }}</small></td>
+                <td><small>{{ entity.modelo }}</small></td>
+                <td><small>{{ entity.descripcion }}</small></td>
                 <td>
                     {% if entity.status %}
-                        <span class="label label-success">&nbsp;Activo&nbsp;&nbsp;</span>
+                        <span class="label label-success"><small class="ajustar_label">&nbsp;Activo&nbsp;&nbsp;</small></span>
                     {% else %}
-                        <span class="label label-danger">Inactivo</span>
+                        <span class="label label-danger"><small class="ajustar_label">Inactivo</small></span>
                     {% endif %}
                 </td>
                 <td>
                     {% if entity|length > 9 %}
-                        {{ entity.statusAsignacion.nombre }}
+                        <small>{{ entity.statusAsignacion.nombre }}</small>
                     {% endif %}
                 </td>
-                <td>{% if entity|length > 9 %}{{ entity.corresponsalia.nombre }}{% endif %}</td>
+                <td><small>{% if entity|length > 9 %}{{ entity.corresponsalia.nombre }}{% endif %}</small></td>
                 <td>
                     <a href="{{ path('tecnoequipo_show', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-eye-open"></b></a>
                     <a href="{{ path('tecnoequipo_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit"></b></a>|
                     {% if entity.status %}
                         {% if entity|length > 9 %}
                             {% if entity.statusAsignacion == "PRESTAMO" %}
-                                <a href=""><b class="text-warning"><span class="prestamo label label-info" data-id="{{entity.id}}" data-toggle="modal" data-target="#myModal">&nbsp;PRESTAMO&nbsp;</span></b></a>
+                            <a href=""><b class="text-warning"><span class="prestamo label label-info" data-id="{{entity.id}}" data-toggle="modal" data-target="#myModal"><small>&nbsp;PRESTAMO&nbsp;</small></span></b></a>
                             {% else %}
-                                <a href="{{ path('tecnoasignar_reasignar', {'id':entity.id}) }}"><b class="text-warning"><span class="label label-info">REASIGNAR</span></b></a>
+                                <a href="{{ path('tecnoasignar_reasignar', {'id':entity.id}) }}"><b class="text-warning"><span class="label label-info"><small>REASIGNAR</small></span></b></a>
                             {% endif %}
                         {% else %}
-                            <a href="{{ path('tecnoasignar_new', {'id':entity.id}) }}"><b class="text-warning"><span class="label label-primary">&nbsp;&nbsp;ASIGNAR&nbsp;&nbsp;&nbsp;</span></b></a>
+                            <a href="{{ path('tecnoasignar_new', {'id':entity.id}) }}"><b class="text-warning"><span class="label label-primary"><small>&nbsp;&nbsp;ASIGNAR&nbsp;&nbsp;&nbsp;</small></span></b></a>
                         {% endif %}
                     {% endif %}
                  </td> 
