--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/inicio.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/inicio.html.twig
@@ -14,7 +14,7 @@
 {% block javascripts %}
 	{{ parent() }}
     <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDaX5WySgrnP70Br7a83wkzFJb7d6onGis&sensor=true&language=es">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaX5WySgrnP70Br7a83wkzFJb7d6onGis&sensor=true&language=es">
     </script>
 
     <script type="text/javascript">
