--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Ajax/ajaxreporterendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Ajax/ajaxreporterendicion.html.twig
@@ -7,7 +7,7 @@
 
 {% elseif muestra==3.3 %}
 	<div class="contenedorform">
-	    <div class="labelform">descripciongasto:</div>
+	    <div class="labelform">Descripcion gasto:</div>
 	    <div class="widgetform">{{ form_widget(form.descripciongasto,{'attr':{'style':'width:250px'}}) }}</div>
 	</div>
 	<div id="aniodesde"></div>
@@ -38,13 +38,13 @@
         <div class="labelform" style="width:285px;">Mes hasta:</div>
         <div class="widgetform">Hasta: {{ form_widget(form.meshasta,{'attr':{'style':'width:100px'}}) }}</div>
     </div>
-    <div id="cobertura"></div>
+    <div id="descripcionperiodo"></div>
 
 {% elseif muestra==7 %}
 	
     <div class="contenedorform">
-        <div class="labelform">Cobertura:</div>
-        <div class="widgetform">{{ form_widget(form.cobertura) }}</div>
+        <div class="labelform">Descripción Periodo:</div>
+        <div class="widgetform">{{ form_widget(form.descripcionperiodo) }}</div>
     </div>
 {% endif %}
 
@@ -95,27 +95,25 @@
         });
 
         $('#reporte_meshasta').change(function(){
-        	var dato = $("#reporte_tipogasto").val();
-        	if(dato[0]==2){
+            var tg = $("#reporte_tipogasto").val();
+            var cor = $("#reporte_corresponsalia").val();
+            var ad = $("#reporte_aniodesde").val();
+            var ah = $("#reporte_aniohasta").val();
+            var md = $("#reporte_mesdesde").val();
+            var mh = $("#reporte_meshasta").val();
 
-	        	var cor = $("#reporte_corresponsalia").val();
-	        	var ad = $("#reporte_aniodesde").val();
-	        	var ah = $("#reporte_aniohasta").val();
-	        	var md = $("#reporte_mesdesde").val();
-	        	var mh = $("#reporte_meshasta").val();
+            var dato = [ad,ah,md,mh,cor,tg];
 
-	        	var dato = [ad,ah,md,mh,"::",cor];
+            var ruta = "{{ path('ajaxreporterendicion', {'dato': 'variable','muestra': '7'}) }}";
+            ruta = ruta.replace("variable", dato);
+            $('#descripcionperiodo').load(ruta);
+            $('#boton').hide();
 
-	            var ruta = "{{ path('ajaxreporterendicion', {'dato': 'variable','muestra': '7'}) }}";
-	            ruta = ruta.replace("variable", dato);
-	            $('#cobertura').load(ruta);
-	            $('#boton').hide();
+	        });
 
-	        }
+            $('#reporte_meshasta').change(function(){
+                $('#boton').show();
+            });
         });
 
-        $('#reporte_meshasta').change(function(){
-            $('#boton').show();
-        });
-    });
 </script>
