--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/editarendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/editarendicion.html.twig
@@ -76,7 +76,7 @@
     $( "#rendicion_relaciongasto_fechafactura" ).datepicker({
       changeMonth: true,
       changeYear: true,
-      dateFormat: "yy-mm-dd",
+      dateFormat: "dd-mm-yy",
     });
   });
   </script>
