--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Ajax/ajaxreporteauef.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Ajax/ajaxreporteauef.html.twig
@@ -90,7 +90,8 @@
         	var md = $("#reporte_mesdesde").val();
         	var mh = $("#reporte_meshasta").val();
 
-        	var dato = [ad,ah,md,mh,cor,tg];
+        	var dato = [ad,ah,md,mh+"::"+cor+"::"+tg];
+            
             var ruta = "{{ path('ajaxreporteauef', {'dato': 'variable','muestra': '7'}) }}";
             ruta = ruta.replace("variable", dato);
             $('#descripcionperiodo').load(ruta);
