--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -58,11 +58,11 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">TECNOLOGIA <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="{{ path('tecnocategoria') }}">CATEGORIA</a></li>
-          <li><a href="{{ path('tecnobitacora') }}">BITACORA</a></li>
-          <li><a href="{{ path('tecnoequipo') }}">EQUIPO</a></li>
-          <li><a href="{{ path('tecnomarca') }}">MARCA</a></li>
-          <li><a href="{{ path('tecnomodelo') }}">MODELO</a></li>
+          <li><a href="{{ path('tecnocategoria') }}">Categoria</a></li>
+          <li><a href="{{ path('tecnobitacora') }}">Bitacora</a></li>
+          <li><a href="{{ path('tecnoequipo') }}">Equipo</a></li>
+          <li><a href="{{ path('tecnomarca') }}">Marca</a></li>
+          <li><a href="{{ path('tecnomodelo') }}">Modelo</a></li>
         </ul>
       </li>
       {% endif %}
