--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/index.html.twig
@@ -4,28 +4,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <style type="text/css">
-        .table-bordered > thead > tr > th, 
-        .table-bordered > tbody > tr > th, 
-        .table-bordered > tfoot > tr > th, 
-        .table-bordered > thead > tr > td, 
-        .table-bordered > tbody > tr > td, 
-        .table-bordered > tfoot > tr > td {
-            border-color: #A5D9FF;
-        }
-        
-        .sorting_asc, 
-        .sorting_desc, 
-        .sorting, 
-        .sorting_asc_disabled,
-        .sorting_desc_disabled {
-            background-image: none;
-        }
-        
-        .table > thead >tr >th {
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ asset('bundles/corresponsalia/Tecnologia/css/tecno_general.css') }}"/>
 {% endblock %}
 
 {% block body -%}
@@ -41,10 +20,10 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td>{{ entity.nombre }}</td>
+                <td class="indentar_texto_tabular">{{ entity.nombre|capitalize }}</td>
                 <td>
-                    <a href="{{ path('tecnocategoria_show', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-eye-open"></b></a>
-                    <a href="{{ path('tecnocategoria_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit"></b></a>
+                    <a class="indentar_enlace" href="{{ path('tecnocategoria_show', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-eye-open"></b></a>
+                    <a class="indentar_enlace" href="{{ path('tecnocategoria_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit"></b></a>
                 </td>
             </tr>
         {% endfor %}
@@ -52,14 +31,14 @@
     </table>
 
         <BR><BR><a class="btn btn-primary" href="{{ path('tecnocategoria_new') }}">
-          NUEVA CATEGORIA
+          Nueva Categoria
     </a><br><br>
 
     <script>
         $(document).ready(function(){
             $('#tablalista').dataTable( { //CONVERTIMOS NUESTRO LISTADO DE LA FORMA DEL JQUERY.DATATABLES- PASAMOS EL ID DE LA TABLA
                  "sPaginationType": "full_numbers", //DAMOS FORMATO A LA PAGINACION(NUMEROS)
-                 "aaSorting": [[0,'desc']]
+                 "aaSorting": [[0,'asc']]
              } );
          });
     </script>
